展示REX详情，如有多少是冻结的，什么时候解冻

--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,10 @@ body :global(.am-image-picker-list .am-image-picker-item .am-image-picker-item-r
 }
 
 
+body :global(.am-list-item .am-list-line .am-list-content) {
+  display: flex;
+  flex-direction: row
+}
 
 /* 长输入框 */
 body :global(.am-textarea-has-count) {
